# esphome-elero

./: .clang-format  .clang-tidy  .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN_webui_redesign.md  README.md  config.heltec-lora-v4.yaml  example.yaml  pyproject.toml  release-please-config.json
.claude/: settings.local.json
.claude/agent-memory/fullstack-code-reviewer/: MEMORY.md  recurring-bugs.md
.claude/agent-memory/reviewer/: MEMORY.md
.claude/agents/: developer-architect.md  docs-updater.md  incident-classifier.md  reviewer.md
.claude/skills/: elero-protocol.md  esp32-development.md  modern-cpp.md
.claude/skills/elero-protocol/: SKILL.md
.claude/skills/esp32-development/: SKILL.md
.claude/skills/modern-cpp/: SKILL.md
.claude/skills/review-quality-gates/: SKILL.md
.claude/skills/sx1262-driver/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  prerelease.yml  release.yml
components/elero/: EleroDynamicCover.cpp  EleroDynamicCover.h  EleroDynamicLight.cpp  EleroDynamicLight.h  EleroRemoteControl.cpp  EleroRemoteControl.h  __init__.py  cc1101.h  cc1101_compat.h  cc1101_driver.cpp  cc1101_driver.h  command_sender.h  cover_core.cpp  cover_core.h  cover_sm.cpp  cover_sm.h  device.h  device_manager.h  device_registry.cpp  device_registry.h  device_type.h  dynamic_entity_base.cpp  dynamic_entity_base.h  elero.cpp  elero.h  elero_packet.cpp  elero_packet.h  elero_protocol.h  elero_strings.cpp  elero_strings.h  esp_cover_shell.h  esp_light_shell.h  light_core.cpp  light_core.h  light_sm.cpp  light_sm.h  nvs_config.cpp  nvs_config.h  nvs_device_manager_base.cpp  nvs_device_manager_base.h  (+15 more)
components/elero/binary_sensor/: __init__.py
components/elero/button/: __init__.py  elero_button.cpp  elero_button.h
components/elero/cover/: EleroCover.cpp  EleroCover.h  __init__.py  esp_cover_shell.h
components/elero/light/: EleroLight.cpp  EleroLight.h  __init__.py  esp_light_shell.h
components/elero/sensor/: __init__.py
components/elero/text_sensor/: __init__.py
components/elero_matter/: __init__.py  matter_adapter.cpp  matter_adapter.h  matter_constants.h
components/elero_mqtt/: __init__.py  esphome_mqtt_adapter.h  mqtt_adapter.cpp  mqtt_adapter.h  mqtt_context.h  mqtt_cover_handler.cpp  mqtt_cover_handler.h  mqtt_device_manager.cpp  mqtt_device_manager.h  mqtt_light_handler.cpp  mqtt_light_handler.h  mqtt_publisher.h  mqtt_remote_handler.cpp  mqtt_remote_handler.h
components/elero_nvs/: NativeNvsCover.cpp  NativeNvsCover.h  NativeNvsLight.cpp  NativeNvsLight.h  __init__.py  native_nvs_device_manager.cpp  native_nvs_device_manager.h  nvs_adapter.h
components/elero_web/: __init__.py  elero_web_server.cpp  elero_web_server.h  elero_web_ui.h  mongoose_config.h  sse_server.cpp  sse_server.h
components/elero_web/frontend/: generate_header.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
components/elero_web/frontend/app/: asyncapi.yaml  elero_web_ui.h  index.html  mock-server.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
components/elero_web/frontend/app/src/: app.tsx  store.ts  styles.css  ws.ts
components/elero_web/frontend/app/src/components/: blind-card.tsx  blind-list-row.tsx  control-bar.tsx  dashboard-header.tsx  dashboard-nav.tsx  device-grid.tsx  device-row.tsx  discovered-card.tsx  discovery-banner.tsx  hub-panel.tsx  icons.tsx  light-card.tsx  logs-panel.tsx  packet-table.tsx  remote-group.tsx  rf-packets.tsx  signal-indicator.tsx
components/elero_web/frontend/app/src/components/ui/: badge.tsx  button.tsx  card.tsx  data-table.tsx  filter-bar.tsx  inline-edit.tsx  input.tsx  label.tsx  slider.tsx  switch.tsx  tooltip.tsx
components/elero_web/frontend/app/src/lib/: protocol.ts
components/elero_web/frontend/app/src/models/: app-store.ts  devices.ts  hub.ts  ui.ts
components/elero_web/frontend/scripts/: generate_header.mjs
components/elero_web/frontend/src/: main.js
components/elero_web/switch/: __init__.py  elero_web_switch.cpp  elero_web_switch.h
configs/: config.heltec-mqtt.yaml  config.lilygo-api-nvs.yaml  config.lilygo-api.yaml  config.lilygo-lora32-mqtt.yaml  config.lilygo-mqtt.yaml
docs/: 0x45_RESEARCH_SUMMARY.md  ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md  PACKET_STRUCTURE.md  PARSE_PACKET_OFFSET_ISSUE.md  RFC-001-tx-race-and-logging.md  SECURITY.md  STATE_MACHINES.md  STATE_REPORTING.md
docs/adr/: 0001-unify-tx-command-paths.md  0002-architecture-rewrite.md
docs/devices/: esp32-cc1101.md  heltec-lora-v4.md  lilygo-lora32-sx1276.md  lilygo-t-embed.md
docs/flows/: STATE_MACHINES.md
matter/: Dockerfile
tests/: common.yaml  test.esp32-api.yaml  test.esp32-ard.yaml  test.esp32-c3-ard.yaml  test.esp32-c3-idf.yaml  test.esp32-custom-freq.yaml  test.esp32-hub-only.yaml  test.esp32-idf.yaml  test.esp32-lights-only.yaml  test.esp32-matter.yaml  test.esp32-minimal.yaml  test.esp32-mqtt.yaml  test.esp32-multi-cover.yaml  test.esp32-nvs.yaml  test.esp32-s3-ard.yaml  test.esp32-s3-idf.yaml  test.esp32-sx1276-idf.yaml  test.esp32-sx1276.yaml  test.esp8266-ard.yaml  test.rp2040-ard.yaml
tests/python/: conftest.py  test_cover_validation.py  test_hub_validation.py
tests/unit/: CMakeLists.txt  test_cc1101_compat.cpp  test_command_sender.cpp  test_cover_core.cpp  test_cover_sm.cpp  test_device_registry.cpp  test_encryption_vectors.cpp  test_freq_conversion.cpp  test_golden_vectors.cpp  test_group_packet.cpp  test_light_core.cpp  test_light_sm.cpp  test_matter_constants.cpp  test_mqtt_device_manager.cpp  test_packet_vectors.cpp  test_parse_roundtrip.cpp  test_poll_timer.cpp  test_protocol.cpp  test_rx_ring_buffer.cpp  test_state_snapshot.cpp  test_string_functions.cpp  test_vectors.h
tests/unit/esphome/components/spi/: spi.h
tests/unit/esphome/core/: component.h  hal.h  helpers.h  log.h  preferences.h
