[project]
name = "esphome-elero"
version = "0.2.0"
description = "ESPHome external component for Elero wireless blinds"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (ESPHome pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["esphome"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
